--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "beautifulsoup4>=4.14.3",
-    "pypdf2>=3.0.1",
+    "pypdf>=6.4.1",
     "python-dotenv>=1.2.1",
     "requests>=2.32.5",
 ]
